# vaes

./: .gitignore  Makefile  aprendizajes.md  pyproject.toml
conf/: config.yaml
conf/loss/: bce.yaml  vae.yaml
conf/model/: autoencoder.yaml  conv_ae.yaml  conv_vae.yaml  linear_ae.yaml  linear_vae.yaml  planar_flows.yaml
conf/optimizer/: adam.yaml  adamw.yaml  rmsprop.yaml  sgd.yaml
references/: flows_orig.py
src/vaes/callbacks/: __init__.py  callbacks.py  evaluation_callback.py  flow_visualization_callbacks.py  mlflow_callbacks.py  mnist_viz_callback.py  vae_visualization_callbacks.py  visualization_callbacks.py  viz_base_callback.py
src/vaes/cli/: train.py
src/vaes/dataloaders/: __init__.py  combh5dataloader.py  cubeh5dataloader.py  mnist.py  samplers.py
src/vaes/logger/: logger.py
src/vaes/losses/: kl_loss.py  vae_loss.py
src/vaes/models/: __init__.py  autoencoder.py  common.py  conv_autoencoder.py  conv_vae.py  flows.py  linear_autoencoder.py  linear_vae.py  variational.py
src/vaes/models/conv/: __init__.py  autoencoder.py  decoder.py  encoder.py  vae.py
src/vaes/pipelines/: __init__.py  autoencoder_pipeline.py  base_pipeline.py  conv_ae_pipeline.py  conv_vae_pipeline.py  linear_ae_pipeline.py  linear_vae_pipeline.py  mnist_pipeline.py  normalizing_flows.py
src/vaes/utils/: __init__.py  color_utils.py  config_utils.py  data_utils.py  energy_functions.py  io_utils.py  plotting.py  regex_utils.py  scalers.py  tensor_ops.py  visualization_utils.py  viz_flow.py  viz_vae.py
src/vaes/visualizations/: plotting.py
tools/: run_mlflow.sh
(+5 files in other folders)
