[project]
name = "vaes"
version = "0.1.0"
description = "VAE experiments on MNIST"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "hydra-core",
    "omegaconf",
    "mlflow",
    "python-dotenv",
    "tqdm",
    "matplotlib",
    "scikit-learn",
]

[project.scripts]
train = "vaes.cli.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vaes"]
